@@ -1039,20 +1039,6 @@ body {
 
 <hr />
 
-<h4>Menu</h4>
-
-<p>Description of menus in menus/</p>
-
-<p><strong>pos</strong> | <code>rectangle</code> | Menu position and dimensions</p>
-
-<p><strong>align</strong> | <code>alignment</code> | Position relative to screen edges</p>
-
-<p><strong>soundfx_open</strong> | <code>filename</code> | Filename of a sound to play when opening this menu.</p>
-
-<p><strong>soundfx_close</strong> | <code>filename</code> | Filename of a sound to play when closing this menu.</p>
-
-<hr />
-
 <h4>MenuActionBar</h4>
 
 <p>Description of menus/actionbar.txt</p>
@@ -1202,6 +1188,20 @@ body {
 <p><strong>scrollpane_separator_color</strong> | <code>color</code> | Color of the separator line in between scroll box items.</p>
 
 <p><strong>keybinds_bg_color</strong> | <code>color, int : Color, Alpha</code> | Background color and alpha for the keybindings scrollbox.</p>
+
+<hr />
+
+<h4>Menu</h4>
+
+<p>Description of menus in menus/</p>
+
+<p><strong>pos</strong> | <code>rectangle</code> | Menu position and dimensions</p>
+
+<p><strong>align</strong> | <code>alignment</code> | Position relative to screen edges</p>
+
+<p><strong>soundfx_open</strong> | <code>filename</code> | Filename of a sound to play when opening this menu.</p>
+
+<p><strong>soundfx_close</strong> | <code>filename</code> | Filename of a sound to play when closing this menu.</p>
 
 <hr />
 
@@ -1393,7 +1393,7 @@ body {
 
 <p><strong>bar_gfx_background</strong> | <code>filename</code> | Filename of the image to use for the base of the bar.</p>
 
-<p><strong>hide_timeout</strong> | <code>int</code> | Hide HP and MP bar if full mana or health, after given amount of seconds; Hide XP bar if no changes in XP points for given amount of seconds. 0 disable hiding.</p>
+<p><strong>hide_timeout</strong> | <code>duration</code> | Hide HP and MP bar if full mana or health, after given amount of seconds; Hide XP bar if no changes in XP points for given amount of seconds. 0 disable hiding.</p>
 
 <hr />
 
